--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>iCapture The World</title>
-		<link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+		<link href="style.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
